@@ -26,12 +26,13 @@
 #
 
 QE_BIN=~/espresso-4.0.3/bin
-ABINIT_BIN=~/abinit-5.6.3/build/src/main
+#ABINIT_BIN=/home/rangel/abinit-5.7.2/build/src/main
+ABINIT_BIN=/home/ferretti/codes/abinit-5.7.2/build/src/main
 #
 TMPDIR=/scratch/ferretti/WanT
 
 #PARA_PREFIX="mpiexec -np 4"
-#PARA_POSTFIX= 
+PARA_POSTFIX= 
 
 
 #      ***** usually, do NOT modify below this line ***** 
