@@ -4,6 +4,10 @@
 =======================================================
 
 
+12 Feb 2009      wannier90 fmt supported in transport; etsf_error handler
+                 added (according to a former implementation of Conor Hogan).
+                 (AF)
+
 10 Feb 2009      Input files for abinit calculations made more standard
                  (thanks to Tonatiuh Rangel). Test03 improved and references
                  updated. Stdout made more clear when selecting DFT datafiles. 
